--- a/apps/marketing/src/components/PricingTable.astro
+++ b/apps/marketing/src/components/PricingTable.astro
@@ -1,11 +1,22 @@
 ---
+import PricingCard from "./PricingCard.astro";
+
 interface Props {
 	hideHeading?: boolean;
 }
 
 const { hideHeading = false } = Astro.props;
 
-const _plans = [
+interface Plan {
+	name: string;
+	price: string;
+	features: string[];
+	cta: string;
+	ctaHref: string;
+	highlighted: boolean;
+}
+
+const plans: Plan[] = [
 	{
 		name: "Free",
 		price: "$0",
