--- a/apps/marketing/src/pages/features/integrations.astro
+++ b/apps/marketing/src/pages/features/integrations.astro
@@ -1,4 +1,6 @@
 ---
+import FeaturePageLayout from "../../layouts/FeaturePageLayout.astro";
+import Badge from "../../components/Badge.astro";
 ---
 
 <FeaturePageLayout
