--- a/apps/marketing/src/pages/[...slug].astro
+++ b/apps/marketing/src/pages/[...slug].astro
@@ -1,5 +1,6 @@
 ---
 import { type CollectionEntry, getCollection, render } from "astro:content";
+import PageLayout from "../layouts/PageLayout.astro";
 
 const { slug } = Astro.params;
 if (!slug) {
