--- a/apps/marketing/src/pages/legal/privacy.astro
+++ b/apps/marketing/src/pages/legal/privacy.astro
@@ -1,4 +1,5 @@
 ---
+import LegalLayout from "../../layouts/LegalLayout.astro";
 ---
 
 <LegalLayout title="Privacy Policy" lastUpdated="January 23, 2026">
